# manim-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  service.py  worker.py
api/: __init__.py
api/prompts/: manimDocs.py
api/public/: openapi.yaml  scene_32d6.py  scene_41b0.py
api/routes/: chat_endpoint.py  video_rendering.py
public/: openapi.yaml  scene_021e.py  scene_2d8a.py  scene_556d.py  scene_8fa5.py  scene_9f34.py  scene_a0aa.py  scene_ee0f.py  scene_fe15.py
routes/: __init__.py  chat_endpoint.py  code_generation.py  video_rendering.py  video_utils.py  video_worker.py
templates/: index.html
